<resources>
    <string name="app_name">SecureChat</string>
    <string name="action_settings">Settings</string>
    <string name="action_next">Next</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="chat_prompt">Chat Message</string>
    <string name="network_wait">Connecting to server</string>
    <string name="decrypt_label">(decrypting)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newchat_title">New Chat</string>
    <string name="newchat_chat">Chat</string>
    <string name="newchat_message">Enter the user you wish to chat with</string>
    <string name="newchat_user">Username</string>
    <string name="selfchat_title">Error</string>
    <string name="selfchat_message">You cannot chat with yourself.</string>
    <string name="onboarding_title_instructions">SecureChat Setup</string>
    <string name="onboarding_title_select_passcode">Select Passcode</string>
    <string name="onboarding_title_generate_rsa">Select RSA Key</string>
    <string name="onboarding_title_select_server">Select Server URL</string>
    <string name="onboarding_title_account">User Account</string>
    <string name="onboarding_title_login">Log Into Your Account</string>
    <string name="onboarding_title_create">Create New Account</string>
    <string name="onboarding_title_forgot_password">Forgot Password</string>
    <string name="onboarding_title_finished">Finished</string>
    <string name="onboarding_instructions">You currently do not have an account
        associated with this device.\n\nThe next few screens will allow you to
        create an RSA public/private key, and to set up a new account or connect
        this device to an existing account.</string>
    <string name="onboarding_select_password_instructions">Please select a
        password.\n\nThis passcode will be used to encrypt the data on your
        device. There is no way to recover this passcode; if you lose it the
        data in this application will be lost.</string>
    <string name="onboarding_select_rsa_key">Now, please select an RSA
        key size. The smaller the key, the faster the encryption, but the less
        secure mssages will be. A 1024 bit key may take several seconds to
        generate, a 2048 key can take a few minutes, and a 4096 key several
        minutes to generate. This is done only once.</string>
    <string name="onboarding_select_server">Now you need to enter a
        SecureChat server URL. This is the Java Tomcat server that was set
        up to chat between clients.</string>
    <string name="onboarding_create_account">Select a username and password.
        This will be used to identify you to other people.\n\nFor the best
        security, select a username which is not related to your e-mail
        address or your personal name....</string>
    <string name="onboarding_login_account">Enter your username/password
        pair. If you have forgotten your password, you can reset it using
        another device associated with your account.</string>
    <string name="onboarding_forgot_password_info">Enter the username of the
        account whose password you wish to reset.\n\nThis will send a
        message to your other attached devices giving you the chance
        to reset your password. You may then log in using this device
        to add it to your account.</string>
    <string name="onboarding_finished">Your device is now set up and
        connected to your account.</string>
    <string name="onboarding_passcode">Passcode</string>
    <string name="onboarding_password">Password</string>
    <string name="onboarding_username">Username</string>
    <string name="onboarding_server">Server URL</string>
    <string name="onboarding_forgot_password">Forgot Password</string>
    <string name="onboarding_reset_password">Reset Password</string>
    <string name="onboarding_generate_key">Generate Key</string>
    <string name="onboarding_regenerate_key">Regenerate Key</string>
    <string name="login_ok">Login</string>
    <string name="login_title">Login</string>
    <string name="login_message">Please supply your username and password
        for your server account.</string>
    <string name="login_forgot">Forgot Password</string>
    <string name="login_new_account">New Account</string>
    <string name="enter_passcode">Please enter your passcode.</string>
    <string name="login_button">Login</string>
    <string name="setup_device">Set Up As New Device</string>
    <string name="incorrect_passcode_title">Incorrect passcode</string>
    <string name="incorrect_passcode_message">The passcode you entered is
        incorrect.</string>
    <string name="new_device_title">Are you sure?</string>
    <string name="new_device_message">This will erase the old RSA key,
        reset the username on this device, and cause all stored messages
        to be erased.</string>
    <string name="disconnect_start_title">Disconnect</string>
    <string name="disconnect_start_message">By disconnecting this device
        from your account, you will lose all messages on this device and
        you will no longer receive messages from the remote server.\n\n
        Because messages are not stored on the remote server, lost messages
        may not be recovered.\n\nThis operation cannot be undone.</string>
    <string name="disconnect_start_ok">Disconnect From Account</string>
    <string name="disconnect_end_title">Finish</string>
    <string name="disconnect_end_message">This device has been disconnected
        from your account, and all messages have been erased from this
        device. RSA tokens have been cleared, and you will now be asked
        to set up a new account.</string>
    <string name="change_passcode_start_title">Change Passcode</string>
    <string name="change_passcode_start_message">Please select a new device
        passcode. This passcode is used when opening up the application.</string>
    <string name="change_passcode_old">Old Passcode</string>
    <string name="change_passcode_new">New Passcode</string>
    <string name="change_passcode_copy">Retype New Passcode</string>
    <string name="change_passcode_end_title">Finish</string>
    <string name="change_passcode_end_message">Your application passcode has
        been reset.</string>
    <string name="change_password_start_title">Change Password</string>
    <string name="change_password_start_message">Please select a new password.
        Your existing server account\'s password will be replaced with this
        new password.</string>
    <string name="change_password_old">Old Password</string>
    <string name="change_password_new">New Password</string>
    <string name="change_password_copy">Retype New Password</string>
    <string name="change_password_end_title">Finish</string>
    <string name="change_password_end_message">Your password has
        been reset.</string>
    <string name="change_passcode_not_matched_title">Passcode doesn\'t match</string>
    <string name="change_passcode_not_matched_message">The new passcode must
        match the retyped passcode.</string>
    <string name="change_password_not_matched_title">Password doesn\'t match</string>
    <string name="change_password_not_matched_message">The new password must
        match the retyped passcode.</string>
    <string name="change_passcode_wrong_title">Incorrect passcode</string>
    <string name="change_passcode_wrong_message">The old passcode was
        incorrect.</string>
    <string name="you_have_singular">You have %d device.</string>
    <string name="you_have_plural">You have %d devices.</string>
    <string name="user_has_singular">User has %d device.</string>
    <string name="user_has_plural">User has %d devices.</string>
    <string name="new_account_title">Set Up New Account</string>
    <string name="new_account_ok">Set Up New Account</string>
    <string name="new_account_message">When you set up a new account,
        the contents of this device, the old private key, and other account
        information will be erased.</string>
    <string name="new_account_verify_title">Are you sure?</string>
    <string name="new_account_verify_ok">New Account</string>
    <string name="new_account_verify_message">This will erase the old RSA key,
        reset the username on this device, and cause all stored messages
        to be erased.</string>
    <string name="passcode_short_title">Passcode too short</string>
    <string name="passcode_short_message">The passcode you selected is too
        short. It needs to be at least 4 digits.</string>
    <string name="weak_password_title">Password weak</string>
    <string name="weak_password_message">Your password must be at least 8
        characters, with a capital and lowercase letter, number and
        punctuation.</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_message">Your password has been reset.
        Please check on another device on your account for steps to
        reset your password.</string>
    <string name="server_exception_title">Server Error</string>
    <string name="login_error_title">Login Error</string>
    <string name="internal_error_title">Internal Error</string>
    <string name="not_authorized_title">Not Authorized</string>
    <string name="username_already_exists_title">User already exists</string>
    <string name="unknown_device_title">Unknown device</string>
    <string name="unknown_user_title">Unknown user</string>
    <string name="unknown_error_title">Unknown error</string>
    <string name="server_exception_message">An unexpected problem was reported
        by the remote server</string>
    <string name="login_error_message">The username or password provided
        are incorrect.</string>
    <string name="internal_error_message">An unexpected problem was reported
        by the remote server.</string>
    <string name="not_authorized_message">You are currently not
        authorized to perform this operation.</string>
    <string name="username_already_exists_message">The username you selected
        is already taken; please pick another.</string>
    <string name="unknown_device_message">Unable to find this device in
        the server</string>
    <string name="unknown_user_message">The user you provided is unknown.
        Please check and try again.</string>
    <string name="unknown_error_message">An unknown server error was
        reported.</string>
    <string name="generate_key_title">RSA Key Generated</string>
    <string name="generate_key_message">Your RSA Key has been generated.</string>
    <string name="regenerate_key_title">Regenerate Key?</string>
    <string name="regenerate_key_message">Are you sure you wish to regenerate
        your RSA key? Doing so will make it impossible to read stored messages,
        and should only be done if you suspect your private key on this
        device has been compromised.</string>
    <string name="regenerate_key_prompt">Regenerate</string>
    <string name="long_key_title">Generate Key?</string>
    <string name="long_key_message">The larger the RSA key, the longer this
        will take. A long RSA key can take over a minute to generate, and
        cannot be canceled. This operation only needs to be done once.
        Continue?</string>
    <string name="enter_server_title">Please enter URL</string>
    <string name="enter_server_message">Please enter the URL of a sever
        that is hosting the SecureChat server URL.</string>
    <string name="error_server_title">Server Error</string>
</resources>